--- a/app/src/main/res/layout/weather_list_item.xml
+++ b/app/src/main/res/layout/weather_list_item.xml
@@ -23,8 +23,56 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/today"
             android:textColor="@color/colorPrimary"/>
+
+        <LinearLayout
+            android:id="@+id/dawnLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/item_margin"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/dawn_weather"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@mipmap/weather_day_00"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dawn"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorPrimary"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/item_margin"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dawn_wind_direction"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceListItem"/>
+
+                <TextView
+                    android:id="@+id/dawn_wind_speed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceListItem"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/dawn_temperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="24sp"/>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/dayLayout"
@@ -38,6 +86,13 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@mipmap/weather_day_00"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/day"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorPrimary"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -79,6 +134,13 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@mipmap/weather_night_00"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/night"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorPrimary"/>
 
             <LinearLayout
                 android:layout_width="0dp"
